--- a/index.html
+++ b/index.html
@@ -18,6 +18,6 @@
 	        <a href="#" target="_blank" class="tweet"><i class="fa fa-lg fa-twitter"></i> Tweet</a>
 	    </div>
 	</main>
-	<script type="text/javascript" src="https://rawgit.com/goget9/test/blob/master/scripts.js"></script>
+	<script type="text/javascript" src="https://raw.githubusercontent.com/goget9/test/master/scripts.js"></script>
 </body>
 </html>
