--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
 	<title>Random Quote Machine</title>
 	<script src="//code.jquery.com/jquery-3.0.0.min.js" integrity="sha256-JmvOoLtYsmqlsWxa7mDSLMwa6dZ9rrIdtrrVYRnDRH0=" crossorigin="anonymous"></script>
+	<script type="text/javascript" src="https://raw.githubusercontent.com/goget9/test/master/scripts.js"></script>
+	<link rel="stylesheet" type="text/css" href="https://raw.githubusercontent.com/goget9/test/master/style.css">
 </head>
 <body>
 	<main>
